[gd_scene load_steps=7 format=3 uid="uid://bxvbcus4651uf"]

[ext_resource type="Script" path="res://scripts/ui/level_select.gd" id="1_n0ap1"]
[ext_resource type="Texture2D" uid="uid://cr2au6104hwt3" path="res://assets/art/ui/bakgrunn_kart.png" id="2_lxt8a"]
[ext_resource type="PackedScene" uid="uid://ccw8nj7luquqr" path="res://scenes/save_manager.tscn" id="3_0lr5j"]
[ext_resource type="Theme" uid="uid://dhcc0oot5rr60" path="res://materials/menu_theme.tres" id="3_fybug"]
[ext_resource type="PackedScene" uid="uid://djnq1inpljinj" path="res://scenes/levels/level_data.tscn" id="4_88242"]
[ext_resource type="Texture2D" uid="uid://csy5v6ufun4wb" path="res://assets/art/ui/ui_knapp_tilbake_tekstur.png" id="4_lmajh"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_n0ap1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -119.0
offset_top = -364.0
offset_right = 1929.0
offset_bottom = 1684.0
scale = Vector2(0.88, 0.7)
texture = ExtResource("2_lxt8a")

[node name="CutsceneButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1366.0
offset_top = 484.0
offset_right = 1498.0
offset_bottom = 624.0
theme = ExtResource("3_fybug")
action_mode = 0
text = "ðŸŽ¬"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 256.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_fybug")
action_mode = 0
icon = ExtResource("4_lmajh")

[node name="Levels" type="Control" parent="."]
anchors_preset = 0

[node name="Level1Button" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 947.0
offset_top = 565.0
offset_right = 1133.0
offset_bottom = 718.0
theme = ExtResource("3_fybug")
action_mode = 0
text = "ðŸŸ¢w1m1

"

[node name="Level2Button" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 525.0
offset_top = 513.0
offset_right = 668.0
offset_bottom = 691.0
theme = ExtResource("3_fybug")
action_mode = 0
text = "ðŸ”´
"

[node name="Level3Button" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 97.0
offset_top = 510.0
offset_right = 229.0
offset_bottom = 635.0
theme = ExtResource("3_fybug")
action_mode = 0
text = "ðŸ”´"

[node name="GameStateManager" parent="." instance=ExtResource("3_0lr5j")]

[node name="LevelData" parent="." instance=ExtResource("4_88242")]

[connection signal="pressed" from="CutsceneButton" to="." method="_on_cutscene_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Levels/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Levels/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Levels/Level3Button" to="." method="_on_level_3_button_pressed"]
